flux/apps/shelfmark/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shelfmark
  namespace: multimedia-factory
spec:
  selector:
    app: shelfmark
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
