flux/apps/shelfmark/httproute.enc.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
    name: shelfmark
    namespace: multimedia-factory
spec:
    parentRefs:
        - name: traefik-gateway
          namespace: system-addon
    hostnames:
        - ENC[AES256_GCM,data:9pbRT/yCu9emHtl7EK+fB5kp1zw9QPOOor0NZ8RwjQ==,iv:v4diDg1PX5zXCbAF+4u5jVyIt/d8cEciGTC3+Kuhqgk=,tag:5xchiSoR0JZaGiWMLZ+olA==,type:str]
    rules:
        - matches:
            - path:
                type: PathPrefix
                value: /
          backendRefs:
            - name: shelfmark
              port: 8084
sops:
    age:
        - recipient: age15kgnnd0nlu5vxerhfcrzh5y77x7efudnk74sk4d6z3zn29yltc5q25r54a
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRUGRydlVQVWhXcGZiR21n
[...]
            d4ldKu4irNvkJu6H5RNGx9HIM/PW/l8BULrD4eMzwhElQd/w809qwQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2026-05-05T19:54:45Z"
    mac: ENC[AES256_GCM,data:gaoc4Pc3ETETZsO859zEhsX11SLsLas/kpwlJyuipsjn//b6SYrsR4BL4w7mMBYavJvKJ1ye4cGYCm0dagA9oeHMm+l1sGyz/MqjrvbR8DdbjpRS2e2nm25O4p6wJbqGaKWi3kkHMsWX3APS9tMnDTvSJwPnvDnnD8kpi1SOK50=,iv:oJmZcgpJtcuoRdBjA054lO+yR/QlHxwfgTW3nsfNhlM=,tag:fJ+j3ry2B1zMVVtX7Eo11w==,type:str]
    encrypted_regex: hostnames|0
    version: 3.12.2
